--- a/index.html
+++ b/index.html
@@ -20,9 +20,12 @@
     
    <p class="apresentacao__conteudo__texto"> Olá eu sou Pamela, um <strong class="titulo__destaque">desenvolvedor de front-end com especialidade em HTML e CSS</strong>. Ajudo pequenos negócio e designer a colocarem em prática boas ideia. vamos conversar? </p>
 </div>
+
+<div class="apresencao__links">
     <a href="https://Instagram.com/pam_htxx"> Instagram </a>
 
     <a href="https://github.com/pamelamarquesdelara"> Github</a>
+</div>
 
     <img src="foto.jpg" class="foto">
       
