--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
 
 <div class="apresencao__links">
+  <h2 class="apresentacao__linkS__subtitulo">acesse as minhas redes:</h2>
     <a class="apresencao__links__link" href="https://Instagram.com/pam_htxx"> Instagram </a>
 
     <a class="apresencao__links__link href="https://github.com/pamelamarquesdelara"> Github</a>
