--- a/index.html
+++ b/index.html
@@ -4,38 +4,33 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>portifólio-pamela</title>
+  <title>portfólio - Pamela</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-  <header> <!--Header é o cabeçalho -->
+  <header> <!-- header é o cabeçalho-->
 
   </header>
 
-  <main class="apresentacao"> <!-- é a parte principal -->
+  <main class="apresentacao"> <!-- main é o menu principal -->
+    <div class="apresentacao_conteudo">
+      <h1 class="apresentacao_conteudo_titulo">eleve seu negócio digital a outro nível com um <strong class="titulo_destaque">front-end de qualidade!</strong>
+      </h1>
+      <p class="apresentacao_conteudo_texto"> oi sou Pamela, faço marketing digital e administração <strong>meus hobbies são Dancar, cantar e vender bombom</strong>, ajudo pequenos negócios e designers a colocarem em prática boas ideias, <strong>vamos estudar?</strong> </p>
 
-<div class="apresentacao__conteudo">
-   <h1 class="apresentacao__conteudo__titulo"> Eleve seu negócio digital a outro nível <strong class="titulo__destaque"> com um front-end de qualidade!</strong> </h1>
+     <div class=" apresentacao__links">
+          <h2 class="apresentacao__links__subtitulo">acesse minhas notas</h2>
+          <a class="apresentacao__links__link" href="https://instagram.com/pam_htx">Instagram</a>
+          <a class="apresentacao__links__link" href="https://github.com/pamelamarquesdelara">Github</a>
+    </div>
 
-   <p class="apresentacao__conteudo__texto"> Olá eu sou Pamela, um <strong class="titulo__destaque">desenvolvedor de front-end com especialidade em HTML e CSS</strong>. Ajudo pequenos negócio e designer a colocarem em prática boas ideia. vamos conversar? </p>
-
-
-<div class="apresencao__links">
-  <h2 class="apresentacao__linkS__subtitulo">acesse as minhas redes:</h2>
-    <a class="apresencao__links__link" href="https://Instagram.com/pam_htxx"> Instagram </a>
-
-    <a class="apresencao__links__link href="https://github.com/pamelamarquesdelara"> Github</a>
-
-</div>
-    <img src="foto.jpg" class="foto">
-
+    </div>
+    <img class="foto" src="foto.jpg">
   </main>
+  <footer> <!-- é o rodape -->
 
-<footer> <!-- footer é o rodapé -->
-
-</footer>
-
+  </footer>
   <script src="script.js"></script>
 </body>
 
